--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,30 +1,63 @@
 :root{
-    font-family: 'Ubuntu', sans-serif;
     font-size: 16px;
 }
+
+*{
+    margin: 0;
+    padding: 0;
+}
+main{
+}
+
 h1{
     font-size: 2rem;
-    color: darkblue;
-    font-weight: 100;
-    font-style: italic;
+    font-family: 'Ubuntu', sans-serif;
+    color:lime;
+    font: weight bolder;
+    
 }
-.footerconteiner{
+
+.mainheader{
     text-align: center;
     text-transform: uppercase;
-    font-style: italic;
-    border: 1px solid blue;
-    background: black;
-    border-radius: 10px;
+    font-style:oblique ;
+    border: 2px solid black;
+    background: blue;
 }
-.headerconteiner h1{
-    color: yellowgreen;
+
+.mainheader h1{
+    color: yellow;
 }
+
 .mainconteiner{
-    background:green;
     font-size: 25px;
-    height: 50vh;
+    background: lightblue;
+    height:31vh;
+    text-align: center;
 }
-.footerconteiner{
-height: 25vh;
-background: red;
+
+
+.mainsection{
+
+}
+
+.right_side{
+    background: violet;
+
+}
+.left_side{
+background: chocolate;
+}
+.inlineblock{
+    display: inline-block;
+}
+
+.w50{
+    width: 48%;
+  
+}
+
+.mainfooter{
+    color: yellow;
+    background: black;
 }
